Fix the horizontal overflow on article section of the index page by applying media queries

--- a/index.css
+++ b/index.css
@@ -98,16 +98,16 @@ h1 {
 
 .salmon-panel img,
 .gray-panel img {
-  width: 15rem;
-  height: 15rem;
+  width: 10rem;
+  height: 10rem;
   border-radius: 50%;
-  margin: 2rem 3rem;
+  margin: 1rem 1rem;
 }
 
 .blue-panel img {
-  width: 15rem;
-  height: 15rem;
-  margin: 2rem 3rem;
+  width: 10rem;
+  height: 10rem;
+  margin: 1rem 1rem;
 }
 
 .black-bar {
@@ -222,6 +222,20 @@ h1 {
     padding: 0.5rem;
     border: 1px solid rgb(53, 53, 53);
     border-radius: 50%;
+  }
+
+  .salmon-panel img,
+  .gray-panel img {
+    width: 15rem;
+    height: 15rem;
+    border-radius: 50%;
+    margin: 2rem 3rem;
+  }
+
+  .blue-panel img {
+    width: 15rem;
+    height: 15rem;
+    margin: 2rem 3rem;
   }
 }
 
